# cocos-lua

./: .cocos-project.json  .gitignore  .gitmodules  .luacheckrc  .luarc.json  CMakeLists.txt  LICENSE  README.md  cocos-lua.code-workspace  cocos-lua.sublime-project  cocos-xgame.sublime-project  cocos-xgame.sublime-workspace  config.cmake  olua.c  olua.h  olua.hpp
frameworks/3rd/bzip2/: CMakeLists.txt
frameworks/3rd/cjson/: CMakeLists.txt  lua_cjson.h
frameworks/3rd/freetype/: CMakeLists.txt
frameworks/3rd/jpeg/: CMakeLists.txt  README.md
frameworks/3rd/lfs/: CMakeLists.txt
frameworks/3rd/lpeg/: CMakeLists.txt  lpcap.c  lptree.c  lpvm.c
frameworks/3rd/lua53/: CMakeLists.txt
frameworks/3rd/luaopenssl/: CMakeLists.txt
frameworks/3rd/luasocket/: CMakeLists.txt  buffer.c  luasocket_scripts.c  luasocket_scripts.cpp  luasocket_scripts.h
frameworks/3rd/md5/: CMakeLists.txt  lua_md5.cpp  md5.h
frameworks/3rd/openssl/: CMakeLists.txt  README.md  opensslconf.h.cmake
frameworks/3rd/openssl/crypto/: CMakeLists.txt
frameworks/3rd/openssl/include/: CMakeLists.txt
frameworks/3rd/openssl/ssl/: CMakeLists.txt
frameworks/3rd/pbc/: CMakeLists.txt  alloc.h  decode.c  map.c  pbc.h  proto.c  register.c  rmessage.c
frameworks/3rd/sproto/: CMakeLists.txt  lsproto.c  sproto.c
frameworks/3rd/sqlite3/: CMakeLists.txt
frameworks/3rd/sqlite3/src/: lsqlite3.c  lsqlite3.h
frameworks/3rd/unzip/: CMakeLists.txt
frameworks/3rd/xxtea/: CMakeLists.txt  xxtea.h
frameworks/3rd/zlib/: CMakeLists.txt  zconf.h
frameworks/cclua/: .gitignore  CMakeLists.txt
frameworks/cclua/android/: AndroidManifest.xml  build.gradle
frameworks/cclua/src/box2d/: CMakeLists.txt  box2d-2dx.h
frameworks/cclua/src/bugly/: CrashReport.cpp  CrashReport.mm  lua_bugly.cpp  lua_bugly.h
frameworks/cclua/src/cclua/: AppContext-ios.mm  AppRootViewController-ios.mm  AssetsBundle.cpp  AssetsBundle.h  CMakeLists.txt  RootScene.cpp  XMLHttpRequest.cpp  XMLHttpRequest.h  cclua-extend.cpp  cclua-extend.h  cclua.h  downloader.cpp  filesystem-private.cpp  filesystem-private.h  filesystem.cpp  filesystem.h  jniutil.cpp  luauser.h  microphone.cpp  microphone.h  olua-2dx.cpp  olua-2dx.h  permission.cpp  runtime-private.cpp  runtime-private.h  runtime.cpp  window.h
frameworks/cclua/src/lame/: VbrTag.c  gain_analysis.c  presets.c  set_get.c  util.h
frameworks/cclua/src/lua-bindings/: CMakeLists.txt  lua_bindings.cpp  lua_box2d.cpp  lua_box2d.h  lua_cclua.cpp  lua_cclua.h  lua_cocos2d.cpp  lua_cocos2d.h  lua_cocos2d_3d.cpp  lua_cocos2d_3d.h  lua_cocos2d_action.cpp  lua_cocos2d_action.h  lua_cocos2d_backend.cpp  lua_cocos2d_backend.h  lua_cocos2d_physics.cpp  lua_cocos2d_physics.h  lua_cocos2d_studio.cpp  lua_cocos2d_studio.h  lua_cocos2d_types.cpp  lua_cocos2d_types.h  lua_cocos2d_ui.cpp  lua_cocos2d_ui.h  lua_conv_manual.cpp  lua_conv_manual.h  lua_crypto.cpp  lua_dragonbones.cpp  lua_dragonbones.h  lua_fairygui.cpp  lua_fairygui.h  lua_javabridge.cpp  lua_manual.cpp  lua_ocbridge.mm  lua_pdebug.cpp  lua_pdebug.h  lua_spine.cpp  lua_spine.h  lua_types.cpp  lua_types.h
frameworks/libdragonbones/: CMakeLists.txt
frameworks/libdragonbones/proj.win32/: libdragonbones.vcxproj  libdragonbones.vcxproj.filters
frameworks/libdragonbones/src/: CCArmatureDisplay.cpp  CCFactory.cpp  CCSlot.cpp  CCSlot.h  CCTextureAtlasData.h
frameworks/libfairygui/: .gitignore  CMakeLists.txt
frameworks/libfairygui/Classes/: FairyGUIMacros.h  GComponent.cpp  GGroup.cpp  GLoader.h  GLoader3D.cpp  GObject.cpp  GRoot.cpp  GRoot.h  GTextInput.cpp  GTreeNode.cpp  ScrollPane.cpp  Transition.cpp  UIPackage.cpp
frameworks/libfairygui/proj.win32/: libfairygui.vcxproj  libfairygui.vcxproj.filters
frameworks/libxgame/: .gitignore  CMakeLists.txt
frameworks/libxgame/android/: AndroidManifest.xml  build.gradle
frameworks/libxgame/proj.android/: AndroidManifest.xml  build.gradle
frameworks/libxgame/proj.win32/: libxgame.vcxproj  libxgame.vcxproj.filters
frameworks/plugins/: .gitignore  CMakeLists.txt
frameworks/plugins/alipay/: AndroidManifest.xml  CMakeLists.txt  alipay.cpp  alipay.h  build.gradle  lua_alipay.cpp  lua_alipay.h
frameworks/plugins/alipay-android/: build.gradle
frameworks/plugins/apple/: Apple.h  Apple.mm  CMakeLists.txt  apple.h  apple.mm  lua_apple.cpp  lua_apple.h
frameworks/plugins/huawei/: .gitignore  CMakeLists.txt  build.gradle  huawei.cpp  huawei.h  lua_huawei.cpp  lua_huawei.h
frameworks/plugins/huawei-android/: AndroidManifest.xml  build.gradle
frameworks/plugins/janalytics/: CMakeLists.txt  janalytics.cpp  janalytics.h  janalytics.mm  lua_janalytics.cpp  lua_janalytics.h
frameworks/plugins/jauth/: CMakeLists.txt  jauth.cpp  jauth.h  jauth.mm  lua_jauth.cpp  lua_jauth.h
frameworks/plugins/jcore/: CMakeLists.txt
frameworks/plugins/jiguang/: CMakeLists.txt  JiGuang.cpp  JiGuang.h  JiGuang.mm  lua_jiguang.cpp  lua_jiguang.h
frameworks/plugins/jpush/: CMakeLists.txt  jpush.cpp  jpush.h  jpush.mm  lua_jpush.cpp  lua_jpush.h
frameworks/plugins/oppo/: .gitignore  AndroidManifest.xml  CMakeLists.txt  lua_oppo.cpp  lua_oppo.h  oppo.cpp  oppo.h
frameworks/plugins/talkingdata/: AndroidManifest.xml  CMakeLists.txt  TalkingData.cpp  TalkingData.h  TalkingData.mm  lua_talkingdata.cpp  lua_talkingdata.h
frameworks/plugins/talkingdata-android/: build.gradle
frameworks/plugins/vivo/: .gitignore  CMakeLists.txt  build.gradle  lua_vivo.cpp  lua_vivo.h  vivo.cpp  vivo.h
frameworks/plugins/vivo-android/: AndroidManifest.xml
frameworks/plugins/wechat/: CMakeLists.txt  WeChat.cpp  WeChat.h  WeChat.mm  lua_wechat-ios.mm  lua_wechat.cpp  lua_wechat.h  lua_wechat_ios.mm  lua_wxvoice_ios.mm
frameworks/plugins/wechat-android/: AndroidManifest.xml
frameworks/plugins/wechat-ios/: lua_wechat_ios.mm
frameworks/toolset/: CMakeLists.txt
frameworks/toolset/cjson/: CMakeLists.txt
frameworks/toolset/lfs/: CMakeLists.txt
frameworks/toolset/lua/: CMakeLists.txt
frameworks/toolset/lua53/: CMakeLists.txt
frameworks/toolset/md5/: CMakeLists.txt
frameworks/toolset/xxtea/: CMakeLists.txt
(+1979 files in other folders)
